[package]
name = "sourdough"
version = "0.1.0"
authors = ["Koen Klinkers <k.klinkers@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
actix-web = "3"
log = "0.4.11"
env_logger = "0.8.2"
figlet-rs = "0.1.3"

[[bin]]
name = "sourdough"
path = "src/cli.rs"

[[bin]]
name = "sd_server"
path = "src/server.rs"
